Added card css but then changed it to row/columns

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,6 @@
   </head>
 
   <body>
-    <div class="container">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">Mina Ghaffar</a>
         <button
@@ -35,10 +34,13 @@
             <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
             <a class="nav-item nav-link" href="contact.html">Contact</a>
           </div>
-        </div>
+        <div class="container"></div>
       </nav>
 
       THIS IS MY CONTACT PAGE
     </div>
+    <footer class="fixed-footer">
+            &copy; Latisha McNeel 2020
+        </footer>
   </body>
 </html>
