Added footer element

--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
       THIS IS MY CONTACT PAGE
     </div>
     <footer class="fixed-footer">
-            &copy; Latisha McNeel 2020
+            &copy; Mina G. 2020
         </footer>
   </body>
 </html>
