--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 
   </head>
 
@@ -63,9 +63,10 @@
           </div>
         </div>
       </div>
+      <br/>
       
-      <footer class="fixed-footer">
-            <p>&copy; Mina G. 2020</p>
+    <footer class="fixed-footer">
+            &copy; Mina G. 2020
         </footer>
   </body>
 </html>
