--- a/portfolio.html
+++ b/portfolio.html
@@ -94,7 +94,7 @@
       </div>
     </div>
     <footer class="fixed-footer">
-      &copy; Latisha McNeel 2020
+      &copy; Mina G. 2020
     </footer>
   </body>
 </html>
