fixing the media responsiveness of the index page

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-info">
       <a class="navbar-brand" href="#">Mina Ghaffar</a>
       <button
         class="navbar-toggler"
@@ -39,15 +40,15 @@
       </div>
     </nav>
 
-    <div class="container">
+    <div class = "container">
     <div class="row">
-      <div class="col-md-8">
-        <div class="page-header">
+      <div class="col">
+        <div class="page-header" style="text-align: center;">
           <h1>About Me</h1>
         </div>
         <div class="row">
           <div class="col-md-3">
-            <img src="http://placehold.it/150x150" alt="Placeholder" class="img-thumbnail">
+            <img src="https://picsum.photos/200" alt="Mina" class="img-thumbnail">
           </div>
           <div class="col-md-9">
             <p>
@@ -62,9 +63,8 @@
             </p>
           </div>
         </div>
-      </div>
-      <br/>
-      
+        </div>
+
     <footer class="fixed-footer">
             &copy; Mina G. 2020
         </footer>
