Added card outline to portfolio and also fixed footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,10 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
@@ -38,14 +42,18 @@
       </div>
     </nav>
 
-    THIS IS MY PORTFOLIO PAGE
     <div class="container">
+      <h1>Portfolio</h1>
       <div class="row row-cols-1 row-cols-md-3">
         <div class="col mb-4">
           <div class="card">
-            <img src="..." class="card-img-top" alt="..." />
+            <img
+              src="https://picsum.photos/200"
+              class="card-img-top"
+              alt="..."
+            />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h2 class="card-title">Project 1</h2>
               <p class="card-text">
                 This is a longer card with supporting text below as a natural
                 lead-in to additional content. This content is a little bit
@@ -56,9 +64,13 @@
         </div>
         <div class="col mb-4">
           <div class="card">
-            <img src="..." class="card-img-top" alt="..." />
+            <img
+              src="https://picsum.photos/200"
+              class="card-img-top"
+              alt="..."
+            />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h2 class="card-title">Project 2</h2>
               <p class="card-text">
                 This is a longer card with supporting text below as a natural
                 lead-in to additional content. This content is a little bit
@@ -69,9 +81,13 @@
         </div>
         <div class="col mb-4">
           <div class="card">
-            <img src="..." class="card-img-top" alt="..." />
+            <img
+              src="https://picsum.photos/200"
+              class="card-img-top"
+              alt="..."
+            />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h2 class="card-title">Project 3</h2>
               <p class="card-text">
                 This is a longer card with supporting text below as a natural
                 lead-in to additional content.
@@ -81,9 +97,13 @@
         </div>
         <div class="col mb-4">
           <div class="card">
-            <img src="..." class="card-img-top" alt="..." />
+            <img
+              src="https://picsum.photos/200"
+              class="card-img-top"
+              alt="..."
+            />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h2 class="card-title">Project 4</h2>
               <p class="card-text">
                 This is a longer card with supporting text below as a natural
                 lead-in to additional content. This content is a little bit
