Adding card borders and fixing fonts

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
       <h1>Portfolio</h1>
       <div class="row row-cols-1 row-cols-md-3">
         <div class="col mb-4">
-          <div class="card">
+          <div class="card border-info mb-3">
             <img
               src="https://picsum.photos/200"
               class="card-img-top"
@@ -55,15 +55,15 @@
             <div class="card-body">
               <h2 class="card-title">Project 1</h2>
               <p class="card-text">
-                This is a longer card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
+                Cat ipsum dolor sit amet, show belly yet grass smells good, but
+                snuggles up to shoulders or knees and purrs you to sleep or if
+                it fits, i sits. Mrow. Jump around on couch, meow constantly.
               </p>
             </div>
           </div>
         </div>
         <div class="col mb-4">
-          <div class="card">
+          <div class="card border-info mb-3">
             <img
               src="https://picsum.photos/200"
               class="card-img-top"
@@ -72,15 +72,15 @@
             <div class="card-body">
               <h2 class="card-title">Project 2</h2>
               <p class="card-text">
-                This is a longer card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
+                Cat ipsum dolor sit amet, show belly yet grass smells good, but
+                snuggles up to shoulders or knees and purrs you to sleep or if
+                it fits, i sits. Mrow. Jump around on couch, meow constantly.
               </p>
             </div>
           </div>
         </div>
         <div class="col mb-4">
-          <div class="card">
+          <div class="card border-info mb-3">
             <img
               src="https://picsum.photos/200"
               class="card-img-top"
@@ -89,14 +89,15 @@
             <div class="card-body">
               <h2 class="card-title">Project 3</h2>
               <p class="card-text">
-                This is a longer card with supporting text below as a natural
-                lead-in to additional content.
+                Cat ipsum dolor sit amet, show belly yet grass smells good, but
+                snuggles up to shoulders or knees and purrs you to sleep or if
+                it fits, i sits. Mrow. Jump around on couch, meow constantly.
               </p>
             </div>
           </div>
         </div>
         <div class="col mb-4">
-          <div class="card">
+          <div class="card border-info mb-3">
             <img
               src="https://picsum.photos/200"
               class="card-img-top"
@@ -105,9 +106,9 @@
             <div class="card-body">
               <h2 class="card-title">Project 4</h2>
               <p class="card-text">
-                This is a longer card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
+                Cat ipsum dolor sit amet, show belly yet grass smells good, but
+                snuggles up to shoulders or knees and purrs you to sleep or if
+                it fits, i sits. Mrow. Jump around on couch, meow constantly.
               </p>
             </div>
           </div>
