Added card element to contact page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
       </div>
     </nav>
 
-    <div class = "container">
+    <div class = "container bg-dark py-5 text-light">
+      <main class = "content">
     <div class="row">
       <div class="col">
         <div class="page-header" style="text-align: center;">
@@ -61,8 +62,12 @@
               dolor et nisi venenatis, nec fermentum urna fringilla. Etiam efficitur porta purus, id
               posuere sem congue a.
             </p>
+            <a href="#" class="card-link">Card link</a>
+            <a href="#" class="card-link">Another link</a>
+            <a href="#" class="card-link">Another link</a>
           </div>
         </div>
+      </main>
         </div>
 
     <footer class="fixed-footer">
