added links to About me page

--- a/index.html
+++ b/index.html
@@ -62,9 +62,8 @@
               dolor et nisi venenatis, nec fermentum urna fringilla. Etiam efficitur porta purus, id
               posuere sem congue a.
             </p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
-            <a href="#" class="card-link">Another link</a>
+            <a href="https://www.linkedin.com/in/mariam-ghaffar-22852957/" class="card-link">Linked In Profile</a>
+            <a href="https://www.facebook.com/ghaffar.mina" class="card-link">Facebook Page</a>
           </div>
         </div>
       </main>
