Validated code using resource online

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
@@ -40,37 +42,51 @@
       </div>
     </nav>
 
-    <div class = "container bg-dark py-5 text-light">
-      <main class = "content">
-    <div class="row">
-      <div class="col">
-        <div class="page-header" style="text-align: center;">
-          <h1>About Me</h1>
-        </div>
+    <div class="container bg-dark py-5 text-light">
+      <main class="content">
         <div class="row">
-          <div class="col-md-3">
-            <img src="https://picsum.photos/200" alt="Mina" class="img-thumbnail">
-          </div>
-          <div class="col-md-9">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dignissim, felis ut dictum tristique,
-              nibh erat feugiat libero, sit amet fringilla mauris velit in mi. Duis tempus felis vitae
-              felis vulputate pretium. Nullam commodo, est ac auctor ornare, eros nisi fringilla sem,
-              non pulvinar tortor lorem sit amet sem. Aenean quis erat facilisis, porttitor ex cursus,
-              luctus enim. Curabitur et metus in lacus tristique sagittis et in lorem. Nunc id nisi et
-              neque fringilla ultricies. Aenean at feugiat elit, a posuere justo. Pellentesque egestas
-              dolor et nisi venenatis, nec fermentum urna fringilla. Etiam efficitur porta purus, id
-              posuere sem congue a.
-            </p>
-            <a href="https://www.linkedin.com/in/mariam-ghaffar-22852957/" class="card-link">Linked In Profile</a>
-            <a href="https://www.facebook.com/ghaffar.mina" class="card-link">Facebook Page</a>
+          <div class="col">
+            <div class="page-header" style="text-align: center;">
+              <h1>About Me</h1>
+            </div>
+            <div class="row">
+              <div class="col-md-3">
+                <img
+                  src="https://picsum.photos/200"
+                  alt="Mina"
+                  class="img-thumbnail"
+                />
+              </div>
+              <div class="col-md-9">
+                <p>
+                  Mina is from Houston, Texas where she is an Insurance
+                  Underwriter and a student in the UT Austin Coding Bootcamp
+                  program. As a newbie to the industry, she has already
+                  successfully created websites with her knowledge in CSS and
+                  Boostrap. In her spare time she is an avid reader and yoga
+                  enthusiast. She is usually a homebody and loves to spend time
+                  with her husband and cat, Luna. For more information feel free
+                  to browse Mina's Portfolio and social media links below.
+                </p>
+                <a
+                  href="https://www.linkedin.com/in/mariam-ghaffar-22852957/"
+                  class="card-link"
+                  >Linked In Profile</a
+                >
+                <a
+                  href="https://www.facebook.com/ghaffar.mina"
+                  class="card-link"
+                  >Facebook Page</a
+                >
+              </div>
+            </div>
           </div>
         </div>
       </main>
-        </div>
+    </div>
 
     <footer class="fixed-footer">
-            &copy; Mina G. 2020
-        </footer>
+      &copy; Mina G. 2020
+    </footer>
   </body>
 </html>
