--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
 
         <div class="row">
           <div class="col-md-6">
-            <form action="">
+            <form action="send email">
               <div class="form-row">
                 <div class="form-group col-md">
                   <input
