--- a/portfolio.html
+++ b/portfolio.html
@@ -43,81 +43,87 @@
     </nav>
 
     <div class="container bg-dark py-5 text-light">
- <main class = "content">
-    <div class="row">
-      <div class="col">
-        <div class="page-header" style="text-align: center;">
-          <h1>Portfolio</h1>
-        </div>
-      
-      <div class="row row-cols-1 row-cols-md-3">
-        <div class="col mb-4">
-          <div class="card bg-dark border-info mb-3">
-            <img
-              src="https://picsum.photos/200"
-              class="card-img-center"
-              alt="Project 1 snapshot"
-            />
-            <div class="card-body">
-              <h2 class="card-title">Project 1</h2>
-              <p class="card-text">
-                Cat ipsum dolor sit amet, show belly yet grass smells good, if
-                it fits, i sits.
-              </p>
+      <main class="content">
+        <div class="row">
+          <div class="col">
+            <div class="page-header" style="text-align: center;">
+              <h1>Portfolio</h1>
+            </div>
+
+            <div class="row row-cols-1 row-cols-md-3">
+              <div class="col mb-4">
+                <div class="card bg-dark border-info mb-3">
+                  <img
+                    src="https://picsum.photos/200"
+                    class="card-img-center"
+                    alt="Project 1 snapshot"
+                  />
+                  <div class="card-body">
+                    <h2 class="card-title">Project 1</h2>
+                    <p class="card-text">
+                      Cat ipsum dolor sit amet, show belly yet grass smells
+                      good, if it fits, i sits.
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col mb-4">
+                <div class="card bg-dark border-info mb-3">
+                  <img
+                    src="https://picsum.photos/200"
+                    class="card-img-center"
+                    alt="Project 2 snapshot"
+                  />
+                  <div class="card-body">
+                    <h2 class="card-title">Project 2</h2>
+                    <p class="card-text">
+                      Cat ipsum dolor sit amet, show belly yet grass smells
+                      good, if it fits, i sits.
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col mb-4">
+                <div class="card bg-dark border-info mb-3">
+                  <img
+                    src="https://picsum.photos/200"
+                    class="card-img-center"
+                    alt="Project 3 snapshot"
+                  />
+                  <div class="card-body">
+                    <h2 class="card-title">Project 3</h2>
+                    <p class="card-text">
+                      Cat ipsum dolor sit amet, show belly yet grass smells
+                      good, if it fits, i sits.
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col mb-4">
+                <div class="card bg-dark border-info mb-3">
+                  <img
+                    src="https://picsum.photos/200"
+                    class="card-img-center"
+                    alt="Project 4 snapshot"
+                  />
+                  <div class="card-body">
+                    <h2 class="card-title">Project 4</h2>
+                    <p class="card-text">
+                      Cat ipsum dolor sit amet, show belly yet grass smells
+                      good,if it fits, i sits.
+                    </p>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-        <div class="col mb-4">
-          <div class="card bg-dark border-info mb-3">
-            <img
-              src="https://picsum.photos/200"
-              class="card-img-center"
-              alt="Project 2 snapshot"
-            />
-            <div class="card-body">
-              <h2 class="card-title">Project 2</h2>
-              <p class="card-text">
-                Cat ipsum dolor sit amet, show belly yet grass smells good, if
-                it fits, i sits. 
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col mb-4">
-          <div class="card bg-dark border-info mb-3">
-            <img
-              src="https://picsum.photos/200"
-              class="card-img-center"
-              alt="Project 3 snapshot"
-            />
-            <div class="card-body">
-              <h2 class="card-title">Project 3</h2>
-              <p class="card-text">
-                Cat ipsum dolor sit amet, show belly yet grass smells good, if
-                it fits, i sits. 
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col mb-4">
-          <div class="card bg-dark border-info mb-3">
-            <img
-              src="https://picsum.photos/200"
-              class="card-img-center"
-              alt="Project 4 snapshot"
-            />
-            <div class="card-body">
-              <h2 class="card-title">Project 4</h2>
-              <p class="card-text">
-                Cat ipsum dolor sit amet, show belly yet grass smells good,if
-                it fits, i sits. 
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </main>
+      </main>
     </div>
+
     <footer class="fixed-footer">
       &copy; Mina G. 2020
     </footer>
