style changes to footer and body

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Mina Ghaffar</title>
+    <link rel="icon" href="./assets/caticon.jpg" type="image/x-icon">
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -19,7 +20,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="stylesheet" href="./assets/style.css"/>
   </head>
 
   <body>
@@ -64,9 +65,7 @@
                   As a newbie to the industry, I have already
                   successfully developed websites and applications with the knowledge I've learned thus far. </p>
                        
-                    <p>I am an avid reader and yoga enthusiast. I'm usually a homebody and love to spend time
-                  with my husband and cat, Luna. If you ever catch me outdoors its usually for an extreme adventure like hiking or sky diving. 
-                  For more information feel free to browse my Portfolio and social media links below.</p>
+                    <p>I am an avid reader and yoga enthusiast. If you ever catch me outdoors it's usually for an extreme adventure like hiking or sky diving. For more information feel free to browse my Portfolio and social media links below.</p>
                        
                 </aside>
             </div>
@@ -77,12 +76,12 @@
 
     <footer class="navbar fixed-bottom" id="footer">
         <div class="col-md-6 col-sm-5 text-center">
-          <p class="copyright d-none d-sm-block">&copy; Copyright 2020</p>
+          <p class="copyright d-none d-sm-block" style="font-family:Ribeye Marrow, cursive;">&copy; Copyright 2020</p>
         </div>
         <div class="col-md-6 col-sm-7 text-center">
           <section>
             <ul class="menu">
-              <li><a href="#" target="_blank" class="fa fa-linkedin"></a></li>
+              <li><a href="#" target="_blank" class="fa fa-linkedin icon-3x"></a></li>
               <li><a href="#" target="_blank" class="fa fa-github"></a></li>
               <li><a href="#" target="_blank" class="fa fa-facebook"></a></li>
             </ul>
