added profile picture

--- a/index.html
+++ b/index.html
@@ -48,14 +48,11 @@
 
     <div class="container-fluid">
     <div class="row row-style justify-content-center" id="row-bottom">
-            <!--COLUMN 1: PICTURE-->
             <div class="col-md-4 col-sm-6 justify-content-center">
                 <section>
-                    <img src="#" class="img-fluid" id="aboutMeImage" />
+                    <img src="./assets/profile-circle2.png" class="img-fluid" id="aboutMeImage" />
                 </section>
             </div>
-
-            <!--COLUMN 2: ABOUT ME-->
             <div class="col-md-8 col-sm-6 justify-content-center">
                 <aside class="mt-4">
                     <h1 class="about-me-header">About Mina</h1>
@@ -81,7 +78,7 @@
         <div class="col-md-6 col-sm-7 text-center">
           <section>
             <ul class="menu">
-              <li><a href="#" target="_blank" class="fa fa-linkedin icon-3x"></a></li>
+              <li><a href="#" target="_blank" class="fa fa-linkedin"></a></li>
               <li><a href="#" target="_blank" class="fa fa-github"></a></li>
               <li><a href="#" target="_blank" class="fa fa-facebook"></a></li>
             </ul>
