added thumbnails to portfolio page or different projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -52,6 +52,39 @@
             <header>
                 <h1>Portfolio</h1>
             </header>
+          </div>
+
+        <div class="row row-style text-center">
+            <!--FIRST COLUMN: PIC-->
+            <div class="col-6 my-col">
+                <section>
+                    <img src="./assets/Thumbnail2.png" class="img-fluid" alt="welcome page of Librar.io" />
+                </section>
+            </div>
+
+            <!--SECOND COLUMN: PIC-->
+            <div class="col-6 my-col">
+                <aside>
+                    <img src="./assets/thumbnail3.jpg.png" class="img-fluid" alt="picture of a coding quiz" />
+                </aside>
+            </div>
+        </div>
+        <!--THIRD ROW-->
+        <div class="row row-style text-center">
+            <!--FIRST COLUMN: PIC-->
+            <div class="col-6 my-col">
+                <section>
+                    <img src="#" class="img-fluid" alt="" />
+                </section>
+            </div>
+            <!--SECOND COLUMN: PIC-->
+            <div class="col-6 my-col">
+                <aside>
+                    <img src="#" class="img-fluid" alt="" />
+                </aside>
+            </div>
+        </div>
+    </div>
 
     <footer class="navbar fixed-bottom" id="footer">
         <div class="col-md-6 col-sm-5 text-center">
