--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="row row-style justify-content-center" id="row-bottom">
             <div class="col-md-4 col-sm-6 justify-content-center">
                 <section>
-                    <img src="./assets/profile-circle2.png"  class="img-fluid" id="aboutMeImage" />
+                    <img src="./assets/profile-circle2.png"  class="img-fluid" id="aboutMeImage" alt="image of the developer MinaG"/>
         </section>
             </div>
             <div class="col-md-8 col-sm-6 justify-content-center">
