--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,23 @@
             <!--SECOND COLUMN: PIC-->
             <div class="col-6 my-col">
                 <aside>
-                    <img src="#" class="img-fluid" alt="" />
+                    <img src="./assets/Thumbnail5.png" class="img-fluid" alt="blue image that says coming soon" />
+                </aside>
+            </div>
+        </div>
+
+        <div class="row row-style text-center">
+            <!--FIRST COLUMN: PIC-->
+            <div class="col-6 my-col">
+                <section>
+                    <img src="#" class="img-fluid" alt="welcome page of Librar.io" />
+                </section>
+            </div>
+
+            <!--SECOND COLUMN: PIC-->
+            <div class="col-6 my-col">
+                <aside>
+                    <img src="#" class="img-fluid" alt="picture of a coding quiz" />
                 </aside>
             </div>
         </div>
